--- a/app/views/api/images/index.html.slim
+++ b/app/views/api/images/index.html.slim
@@ -1,5 +1,3 @@
-h1 Images
+h1 Images in "#{link_to @bucket.name, [:api, @bucket]}"
 
-- @images.each do |image|
-  = image_tag "/x/#{image.bucket.name}/300x300/#{image.name}"
-
+= render 'images', images: @images
