--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,9 +2,10 @@ doctype 5
 html
   head
     title Imaginary
-    / stylesheet_link_tag    "application", :media => "all"
-    / javascript_include_tag "application"
+    = stylesheet_link_tag "application", :media => "all"
+    = javascript_include_tag "application"
     = csrf_meta_tags
 
   body
-    = yield
+    #content
+      = yield
