--- a/app/views/api/buckets/show.html.slim
+++ b/app/views/api/buckets/show.html.slim
@@ -1,6 +1,8 @@
 h1 Bucket: "#{@bucket.name}"
 
 .actions
+  = link_to "Edit", [:edit, :api, @bucket]
   = link_to "All Buckets", [:api, :buckets]
+
 
 = render 'api/images/images', images: @bucket.images
