--- a/app/views/api/images/_images.html.slim
+++ b/app/views/api/images/_images.html.slim
@@ -1,4 +1,4 @@
 .images
   - images.each do |image|
     .image
-      = image_tag "/x/#{image.bucket.name}/224x224/#{image.name}"
+      = link_to (image_tag "/x/#{image.bucket.name}/228x228/#{image.name}"), "/x/#{image.bucket.name}/#{image.name}"
