--- a/app/views/api/buckets/index.html.slim
+++ b/app/views/api/buckets/index.html.slim
@@ -1,5 +1,5 @@
 h1 Buckets
 
-ul
+.buckets
   - @buckets.each do |bucket|
-    li= link_to bucket.name, [:api, bucket]
+    = link_to bucket.name, [:api, bucket], class: 'button'
