--- a/app/views/api/buckets/index.html.slim
+++ b/app/views/api/buckets/index.html.slim
@@ -1,5 +1,9 @@
 h1 Buckets
 
+.actions
+  = link_to "New Bucket", [:new, :api, :bucket]
+
+h2 Available Buckets
 .buckets
   - @buckets.each do |bucket|
     = link_to bucket.name, [:api, bucket], class: 'button'
