--- a/app/assets/stylesheets/imaginary.css.scss
+++ b/app/assets/stylesheets/imaginary.css.scss
@@ -57,6 +57,10 @@ a {
     border-bottom: 5px solid #eee;
   }
 
+  h2 {
+    border-bottom: 2px solid #eee;
+  }
+
   .actions {
     margin: 20px 0;
 
