--- a/app/views/api/buckets/show.html.slim
+++ b/app/views/api/buckets/show.html.slim
@@ -4,5 +4,5 @@ h1 Bucket: "#{@bucket.name}"
   = link_to "Edit", [:edit, :api, @bucket]
   = link_to "All Buckets", [:api, :buckets]
 
-
+h2 Images
 = render 'api/images/images', images: @bucket.images
