--- a/app/views/api/images/_images.html.slim
+++ b/app/views/api/images/_images.html.slim
@@ -1,4 +1,4 @@
 .images
   - images.each do |image|
     .image
-      = link_to (image_tag "/x/#{image.bucket.name}/228x228/#{image.name}"), [:api, image.bucket, image]
+      = link_to image_tag(transform_url(image, "228x228")), [:api, image.bucket, image]
