--- a/app/views/api/images/show.html.slim
+++ b/app/views/api/images/show.html.slim
@@ -1,7 +1,7 @@
 h1 Image
 
 .actions
-  = link_to "Original Version", "/x/#{@image.bucket.name}/#{@image.name}"
+  = link_to "Original Version", transform_url(@image)
   = link_to "Return to Bucket", [:api, @image.bucket]
 
-= image_tag "/x/#{@image.bucket.name}/1024x/fit/#{@image.name}"
+= image_tag transform_url(@image, '1024x/fit')
