Added warning about changing values in bucket form.

--- a/app/assets/stylesheets/imaginary.css.scss
+++ b/app/assets/stylesheets/imaginary.css.scss
@@ -61,6 +61,14 @@ a {
     border-bottom: 2px solid #eee;
   }
 
+  p {
+    line-height: 1.4;
+  }
+
+  strong {
+    font-weight: bold;
+  }
+
   .actions {
     margin: 20px 0;
 
