--- a/app/assets/stylesheets/imaginary.css.scss
+++ b/app/assets/stylesheets/imaginary.css.scss
@@ -61,8 +61,14 @@ a {
     border-bottom: 2px solid #eee;
   }
 
-  p {
+  p, ul, li {
+    margin: 0.8em 0;
     line-height: 1.4;
+  }
+
+  ul {
+    list-style-type: disc;
+    li { margin-left: 1em; }
   }
 
   strong {
