Rename link to original image.

--- a/app/views/api/images/show.html.slim
+++ b/app/views/api/images/show.html.slim
@@ -1,7 +1,7 @@
 h1 Image
 
 .actions
-  = link_to "Original Version", transform_url(@image)
+  = link_to "Source Image", transform_url(@image)
   = link_to "Return to Bucket", [:api, @image.bucket]
 
 = image_tag transform_url(@image, '1024x/fit')
