--- a/app/views/transforms/welcome.html.slim
+++ b/app/views/transforms/welcome.html.slim
@@ -3,4 +3,4 @@ h1 Imaginary
 p Image storage and transformation server.
 
 .actions
-  = link_to "API Login", [:api]
+  = link_to "API Login", [:buckets]
