--- a/app/assets/stylesheets/imaginary.css.scss
+++ b/app/assets/stylesheets/imaginary.css.scss
@@ -1,8 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 @import "compass";
 @import "compass/reset";
 
-$font-default: 24px "Droid Sans",Helvetica,Arial,sans-serif;
+$font-default: 20px "Helvetica Neue",Helvetica,Arial,sans-serif;
 $color-background: white;
 $color-text: black;
 $color-link: orange;
